<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/half_rectangle_border"
        android:paddingVertical="50dp"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:text="@string/AppTitle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"/>
        <EditText
            android:id="@+id/etRegisterUsername"
            android:hint="@string/dummy_name"
            android:textColor="@color/black"
            android:inputType="text"
            android:fontFamily="@font/roboto_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/input_border" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"/>
        <EditText
            android:id="@+id/etRegisterEmail"
            android:hint="john.doe@puff.com"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/input_border" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"/>
        <EditText
            android:id="@+id/etRegisterPassword"
            android:hint="@string/dummy_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/input_border" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="phone number"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"/>
        <EditText
            android:id="@+id/etRegisterPhoneNumber"
            android:hint="1111 1111 1111"
            android:inputType="phone"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/input_border" />
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"/>
            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="Register"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:backgroundTint="@color/blue_300"
            android:elevation="2dp"
            />
        <TextView
            android:id="@+id/tvToLoginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Already have an account? Login here!"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"/>
    </LinearLayout>

</FrameLayout>